--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcrypt-nodejs": "0.0.3",
+    "clarifai-nodejs-grpc": "^9.8.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "knex": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "pg": "^8.11.3"
   },
   "devDependencies": {
